--- a/todo.css
+++ b/todo.css
@@ -35,6 +35,15 @@ input {
   border-radius: 4px;
 }
 
+#add-task{
+  padding: 15px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 button {
   padding: 10px;
   background-color: #28a745;
@@ -48,6 +57,7 @@ ul {
   list-style: none;
   padding: 0;
   margin-top: 20px;
+  width: 19em;
 }
 
 li {
@@ -57,6 +67,7 @@ li {
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
+  color: #252558;
 }
 
 li.completed {
