--- a/todo.css
+++ b/todo.css
@@ -68,7 +68,8 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #252558;
+  /* color: #252558; */
+  color: #3c48f3
 }
 
 li.completed {
