--- a/todo.css
+++ b/todo.css
@@ -62,6 +62,9 @@ header {
   object-fit: cover;
   border: 2px solid #7c5cff;
 }
+#user{
+  font-size: 2.1em;
+}
 
 .todo-container {
   width: min(500px, 90vw);
